5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1709_3039.log
== TEST (2019-05-02 11:31:29) 
-- CODE:
from math import *
x = float(input("valor de x: "))

if(x>=-1 and x<= -1/2):
	 print(asin(x))
	elif(x<=1 and x>=1/2):
		print(asin(x))
	elif(x>=-1/2 and x<=1/2):
		print(acos(x))
else:
	print("entrada invalida")
	
-- ERROR:
File "XXXX", line 6
    elif(x<=1 and x>=1/2):
                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:35) 
-- CODE:
from math import *
x = float(input("valor de x: "))

if(x>=-1 and x<= -1/2):
	print(asin(x))
	elif(x<=1 and x>=1/2):
		print(asin(x))
	elif(x>=-1/2 and x<=1/2):
		print(acos(x))
else:
	print("entrada invalida")
	
-- ERROR:
File "XXXX", line 6
    elif(x<=1 and x>=1/2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:51) 
-- CODE:
from math import *
x = float(input("valor de x: "))

if(x>=-1 and x<= -1/2):
	print(asin(x))
elif(x<=1 and x>=1/2):
		print(asin(x))
elif(x>=-1/2 and x<=1/2):
		print(acos(x))
else:
	print("entrada invalida")
	
-- OUTPUT:
-1.4292568534704693
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:32:13) 
-- CODE:
from math import *
x = float(input("valor de x: "))

if(x>=-1 and x<= -1/2):
	print(asin(x))
elif(x<=1 and x>=1/2):
		print(asin(x))
elif(x>=-1/2 and x<=1/2):
		print(acos(x))
else:
	print("entrada invalida")
	
-- OUTPUT:
-1.4292568534704693
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:32) 
-- CODE:
from math import *
x = float(input("valor de x: "))

if(x>=-1 and x<= -1/2):
	d = degrees(x)
	print(round(d, 1)
elif(x<=1 and x>=1/2):
		print(asin(x))
elif(x>=-1/2 and x<=1/2):
		print(acos(x))
else:
	print("entrada invalida")
	
-- ERROR:
File "XXXX", line 7
    elif(x<=1 and x>=1/2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:06) 
-- CODE:
from math import *
x = float(input("valor de x: "))

if(x>=-1 and x<= -1/2):
	d = degrees(x)
	print(round(d, 1)
elif(x<=1 and x>=1/2):
		print(asin(x))
elif(x>=-1/2 and x<=1/2):
		print(acos(x))
 else:
	print("entrada invalida")
	
-- ERROR:
File "XXXX", line 7
    elif(x<=1 and x>=1/2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:11) 
-- CODE:
from math import *
x = float(input("valor de x: "))

if(x>=-1 and x<= -1/2):
	d = degrees(x)
	print(round(d, 1)
elif(x<=1 and x>=1/2):
		print(asin(x))
elif(x>=-1/2 and x<=1/2):
		print(acos(x))

else:
	print("entrada invalida")
	
-- ERROR:
File "XXXX", line 7
    elif(x<=1 and x>=1/2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:30) 
-- CODE:
from math import *
x = float(input("valor de x: "))

if(x>=-1 and x<-1/2):
	if(x<=1 and x>1/2):
		d = degrees(x)
		print(round(asin(x), 1))

else:
	if(x>=-1/2 and x<=1/2):
		d = degrees(x)
		print(round(asin(x), 1))
	elif:
		print("entrada invalida")
	
-- ERROR:
File "XXXX", line 13
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:43) 
-- CODE:
from math import *
x = float(input("valor de x: "))

if(x>=-1 and x<-1/2):
	if(x<=1 and x>1/2):
		d = degrees(x)
		print(round(asin(x), 1))

else:
	if(x>=-1/2 and x<=1/2):
		d = degrees(x)
		print(round(asin(x), 1))
	else:
		print("entrada invalida")
	
-- ERROR:
File "XXXX", line 13
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:56) 
-- CODE:
from math import *
x = float(input("valor de x: "))

if(x>=-1 and x<-1/2):
	if(x<=1 and x>1/2):
		d = degrees(x)
		print(round(asin(x), 1))

else:
	if(x>=-1/2 and x<=1/2):
		d = degrees(x)
		print(round(asin(x), 1))
	else:
		print("entrada invalida")
	
-- ERROR:
File "XXXX", line 13
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:43:10) 
-- CODE:
from math import *
x = float(input("valor de x: "))
print(degrees(x))

	
-- OUTPUT:
-56.7228217179515
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:43:39) 
-- CODE:
from math import *
x = degrees(float(input("valor de x: ")))
print(x)

	
-- OUTPUT:
-56.7228217179515
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
